# HuffmanCode

./: .gitignore  README.md  btree.c  btree.h.gch  main  priority_queue.c  priority_queue.h.gch  sample-2mb-text-file.txt  tmp.txt
src/: CMakeLists.txt  btree.c  btree.h  coder.c  decoder.c  heap.c  heap.h  huffman.c  huffman.h  main.c  main2.c  main3.c  node.c  node.h  priority_queue.h  res.txt  utilities.c  utilities.h
tests/: CMakeLists.txt  main.c
